Fix dark mode for mood and labelgroup

--- a/_webpack/stylesheets/_dark.scss
+++ b/_webpack/stylesheets/_dark.scss
@@ -126,7 +126,6 @@ body.dark {
     /* LabelGroup */
     .posts-label {
         color: $darkTextColor;
-        border-bottom: 1px solid #272727;
     }
 
     .labelgroup {
@@ -199,7 +198,7 @@ body.dark {
 
     /* Moods */
     .mood {
-        border: solid 2px #888;
+        border: 2px solid #888;
 
         @media screen and (min-width: $midScreenW + 1) {
 
